--- a/.env
+++ b/.env
@@ -11,6 +11,10 @@ STS_WINDOWS_PROXY_TIMEOUT_S=10.0
 STS_WINDOWS_PROXY_PYTHON="py -3"
 # Optional override; default auto-detects scripts/st_windows_proxy_daemon.py
 STS_WINDOWS_PROXY_SCRIPT=
+STS_AUTO_FORWARD_ON=0
+STS_FORWARD_BASE_URL=http://192.168.4.1
+STS_FORWARD_HTTP_TIMEOUT_S=2
+STS_FORWARD_SETTLE_S=0.4
 
 # Web bridge host/port for slider UI
 ROS_BRIDGE_HOST=0.0.0.0
@@ -18,6 +22,7 @@ ROS_BRIDGE_PORT=8080
 ROS_BRIDGE_NAMES_FILE=/home/ecm/ai-workspace/projects/motor_test/data/motor_names.json
 ROS_BRIDGE_POSITIONS_FILE=/home/ecm/ai-workspace/projects/motor_test/data/motor_positions.json
 ROS_BRIDGE_LIVE_POLL_S=1.0
+SERVO_MOTOR_TYPE=waveshare_st3215
 
 # Serial startup behavior for real hardware mode
 STS_WAIT_FOR_IDS=1
@@ -25,3 +30,4 @@ STS_REQUIRE_ALL_IDS=0
 STS_WAIT_IDS_TIMEOUT_S=8.0
 STS_WAIT_IDS_RETRY_S=0.4
 STS_STARTUP_SETTLE_S=0.4
+STS_RECOVER_CYCLE_DELAY_S=0.25
